# AutoHawkCore

./: .gitignore  README.md  env_setup.ps1  pyproject.toml  setup_windows.ps1
game-data/: consoles.json  sample.json
game-data/NES/: Excitebike.json  Mariobros.json
game-data/NES/states/: Excitebike.State  MariobrosJU.State
middle-tier/: config.py  connection.py  consoles.py  core.py  games.py  helper.py  middle-tier.py
middletier/: __init__.py  config.py  consoles.py  core.py  games.py  middletier.py
scripts/: reset_project.ps1  run_project_marioJU.bat  setup_project.ps1
