[tool.poetry]
name = "middletier"
version = "1.0.0"
description = "TODOt"
readme = "README.md"
authors = ["Michael Hutts <mhutts@udel.edu>"]
repository = "https://github.com/SuperBlueHenBros/middle-tier"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
