[tool.poetry]
name = "AutoHawkCore"
version = "1.1.2"
description = "The middle-tier for easily interfacing with the entire AutoHawk project"
readme = "README.md"
authors = ["Michael Hutts <mhutts@udel.edu>"]
repository = "https://github.com/SuperBlueHenBros/AutoHawkCore"

[tool.poetry.dependencies]
python = "^3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
